# mles_project

./: CMakeLists.txt  README.md  flash.sh  main.c  main.uf2  read.sh  script.py  tree.txt
lib/lcd/: CMakeLists.txt  LCD_Touch.c  LCD_Touch.h
lib/preprocessing/: preprocessing.c  preprocessing.h
lib/processing/: CMakeLists.txt  processing.c  processing.h
lib/sd_card/: CMakeLists.txt  sd_utils.c  sd_utils.h
lib/testing/: CMakeLists.txt  testing.c  testing.h
ml_pico/: fc.cc  inference.c  main.c  mcunet_proxy.cc
models/: analysis_pipeline.py  starting_cnn.py
models/cl/: mnist_optimization.py
models/out_analysis/: cnn_act_elu.h5  cnn_act_elu.tflite  cnn_act_relu.h5  cnn_act_relu.tflite  cnn_act_swish.h5  cnn_act_swish.tflite  cnn_baseline.h5  cnn_baseline.tflite  cnn_epochs_10.h5  cnn_epochs_10.tflite  cnn_epochs_20.h5  cnn_epochs_20.tflite  cnn_epochs_5.h5  cnn_epochs_5.tflite  cnn_lr_0.001.h5  cnn_lr_0.001.tflite  cnn_lr_0.01.h5  cnn_lr_0.01.tflite  cnn_lr_0.05.h5  cnn_lr_0.05.tflite  cnn_opt_adam.h5  cnn_opt_adam.tflite  cnn_opt_rmsprop.h5  cnn_opt_rmsprop.tflite  cnn_opt_sgd.h5  cnn_opt_sgd.tflite  cnn_optimized.h5  cnn_optimized.tflite  fc_baseline.h5  fc_baseline.tflite  mcunet_proxy.h5  mcunet_proxy.tflite  plot_architectures_mem_vs_speed.csv  results.csv  squeezenet_small.h5  squeezenet_small.tflite
models/out_analysis/plots/: architectures_mem_vs_speed.csv  optimized_vs_baseline.csv
models/out_fc_baseline/: baseline_fc_model.h5  model.tflite  summary.csv
